2002-08-22  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile: Include `../config.make' early on to get LIBNCURSESW
	variable from configure before including Makeconf.
	(targets) [LIBNCURSES]: Add console-ncurses.
	(SRCS) [LIBNCURSES]: Add console-ncurses.c.
	(HURDLIBS) [LIBNCURSES]: Add cons.
	(console-ncurses): New target.
	(console-ncurses-CPPFLAGS): New variable.
	(console-ncurses-LDLIBS): Likewise.

2002-08-18  Roland McGrath  <roland@frob.com>

	* fakeroot.sh: Dont use "exec" command, since the original script
	does not and some users use sh syntax here and not just commands.

2002-06-25  Roland McGrath  <roland@frob.com>

	* ping.c: File removed.
	* Makefile (targets, SRCS): Remove it.
	(ping-CPPFLAGS, INSTALL-ping-ops, ping): And all its little friends.

2002-06-14  Roland McGrath  <roland@frob.com>

	* Makefile (INSTALL-vminfo-ops): Variable removed (no setuid).

	* vmstat.c (ensure_def_pager_info): If get_privileged_ports fails with
	EPERM, try to open /servers/default-pager instead.
	* Makefile (INSTALL-vmstat-ops): Variable removed (no setuid).

2002-06-13  Roland McGrath  <roland@frob.com>

	* vminfo.c: Use `z' modifier format modifier for address/size values.

2002-06-08  Roland McGrath  <roland@frob.com>

	* ftpdir.c (pdirent): Use %lld format for off_t value.

2002-05-28  Roland McGrath  <roland@frob.com>

	* fakeauth.c (idvec_copyout): Fix argument type.

	* rpctrace.c (print_data): Use if instead of switch to handle FP type
	sizes, in case double == long double.

	* storeinfo.c (print_store): Use %z format.

	* pids.c (add_fn_pids): unsigned -> size_t
	* w.c (add_utmp_procs): Likewise.
	* login.c (add_canonical_host): Likewise.
	* ps.c (main): Likewise.
	* login.c (add_entry, main): Likewise.
	* settrans.c (main): int -> size_t
	* showtrans.c (main): Likewise.
	* fsysopts.c (main): Likewise.
	* vmstat.c (main): Use int for FWIDTHS.
	* ping.c (main): size_t -> socklen_t
	* fakeauth.c (S_auth_getids, S_auth_makeauth,